@@ -151,6 +151,9 @@
 #define UPNP_HAVE_SSDP 1
 
 /* see upnpconfig.h */
+#define UPNP_HAVE_OPTSSDP 1
+
+/* see upnpconfig.h */
 #define UPNP_HAVE_TOOLS 1
 
 /* see upnpconfig.h */
