@@ -175,8 +175,10 @@ int UpnpSdkDeviceRegisteredV4 = 0;
  * == 0 if unregistered, == 1 if registered. */
 int UpnpSdkDeviceregisteredV6 = 0;
 
+#ifdef HAVE_UPNP_OPTSSDP
 /*! Global variable used in discovery notifications. */
 Upnp_SID gUpnpSdkNLSuuid;
+#endif /* HAVE_UPNP_OPTSSDP */
 
 
 /*!
@@ -310,7 +312,9 @@ static int UpnpInitPreamble(void)
 {
 	int retVal = UPNP_E_SUCCESS;
 	int i;
+#ifdef UPNP_HAVE_OPTSSDP
 	uuid_upnp nls_uuid;
+#endif /* UPNP_HAVE_OPTSSDP */
 
 	retVal = WinsockInit();
 	if (retVal != UPNP_E_SUCCESS) {
@@ -335,9 +339,11 @@ static int UpnpInitPreamble(void)
 		return retVal;
 	}
 
+#ifdef UPNP_HAVE_OPTSSDP
 	/* Create the NLS uuid. */
 	uuid_create(&nls_uuid);
 	uuid_unpack(&nls_uuid, gUpnpSdkNLSuuid);
+#endif /* UPNP_HAVE_OPTSSDP */
 
 	/* Initializes the handle list. */
 	HandleLock();
